# app/models/gamedb_game.rb
@@ -138,6 +138,11 @@ class GamedbGame < ApplicationRecord
     foreign_key: :gamedb_game_id,
     dependent: nil,
     inverse_of: :game
+  has_many :game_keys,
+    class_name: "RpgClubGameKey",
+    foreign_key: :gamedb_game_id,
+    dependent: nil,
+    inverse_of: :game
 
   SUMMARY_COLUMNS = %i[
     game_id title description igdb_id slug total_rating igdb_url created_at updated_at
