# config/routes.rb
@@ -54,6 +54,7 @@ Rails.application.routes.draw do
           post "journal", to: "journal#create"
           get "reminders", to: "reminders#index"
           post "reminders", to: "reminders#create"
+          get "game_keys", to: "game_keys#user_index"
         end
       end
 
@@ -66,6 +67,11 @@ Rails.application.routes.draw do
       resources :user_socials, only: %i[show update destroy]
       resources :journal_entries, only: %i[show update destroy], controller: "journal"
       resources :reminders, only: %i[show update destroy]
+      resources :game_keys, only: %i[index create] do
+        member do
+          post "claim", to: "game_keys#claim"
+        end
+      end
       resources :gotm_entries, only: %i[index show]
       resources :nr_gotm_entries, only: %i[index show]
       get "gotm_entries/:round/nominations", to: "nominations#gotm", as: :gotm_entry_nominations
